chnage header style

--- a/systems-architecture/scalability.asciidoc
+++ b/systems-architecture/scalability.asciidoc
@@ -1,8 +1,7 @@
-Scalability
-==========
+== Scalability
 
-General
--------
+=== General
+
 * with any system, there are at least two things to think about
 ** amount of traffic (usage per second)
 ** amount of data
