--- a/systems-architecture/scalability.asciidoc
+++ b/systems-architecture/scalability.asciidoc
@@ -6,3 +6,10 @@
 ** amount of traffic (usage per second)
 ** amount of data
 * will want to know per/second usage (though it's sometimes easier to think about per month)
+
+[source,python]
+---------------------------------------------------------------------
+
+blah
+blah
+---------------------------------------------------------------------
