--- a/systems-architecture/scalability.asciidoc
+++ b/systems-architecture/scalability.asciidoc
@@ -9,7 +9,13 @@
 
 [source,python]
 ---------------------------------------------------------------------
-
-blah
-blah
+''' A multi-line
+    comment.'''
+def sub_word(mo):
+    ''' Single line comment.'''
+    word = mo.group('word')     # Inline comment
+    if word in keywords[language]:
+        return quote + word + quote
+    else:
+        return word
 ---------------------------------------------------------------------
